# schedule-helper

./: .gitignore  DESIGN.md  README.md  pyproject.toml
app/: __init__.py  main.py  models.py
app/services/: __init__.py  app_usage.py  focus_timer.py  scheduler.py
app/storage/: __init__.py  database.py
app/ui/: main_window.py  metadata_widgets.py  orot_brand.py  quick_markers.py  quick_switch.py  quick_switch_config.py
docs/: focus-ui-redesign-plan.md  product-requirements.md  qa-checklist.md  schedule-tool-plan.md  ui-flow.md
scripts/: package.ps1
tests/: test_app_usage.py  test_focus_timer.py  test_main_icon.py  test_scheduler.py  test_storage.py  test_theme_palette.py  test_timeline_ui.py
