[project]
name = "schedule-helper"
version = "0.1.0"
description = "A Python desktop app that helps build practical weekly schedules."
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.11",
]

[project.optional-dependencies]
dev = [
  "PyInstaller>=6.0",
  "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
